--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
                 }
             });
 
+            // サービスの金額に対する割合を計算
+            const total = data.reduce((sum, val) => sum + val, 0);
+            const percentages = data.map(val => ((val / total) * 100).toFixed(2));
+
             // グラフの描画
             const chart = new Chart(ctx, {
                 type: 'pie',
@@ -163,6 +167,16 @@
                         legend: {
                             position: 'top',
                         },
+                        tooltip: {
+                            callbacks: {
+                                label: function(tooltipItem) {
+                                    const label = tooltipItem.label || '';
+                                    const value = tooltipItem.raw || 0;
+                                    const percentage = percentages[tooltipItem.index];
+                                    return `${label}: ${formatNumber(value)}円 (${percentage}%)`;
+                                }
+                            }
+                        }
                     }
                 }
             });
