--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <script>
         let subscriptions = JSON.parse(localStorage.getItem("subscriptions")) || [];
+        let chartInstance = null; // グラフのインスタンスを保持
 
         function formatNumber(num) {
             return num.toLocaleString();
@@ -88,7 +89,7 @@
             yearlyTotalEl.textContent = formatNumber(yearlyTotal);
             localStorage.setItem("subscriptions", JSON.stringify(subscriptions));
 
-            updateChart();
+            updateChart(); // グラフを更新
         }
 
         function addSubscription() {
@@ -148,41 +149,47 @@
             const total = data.reduce((sum, val) => sum + val, 0);
             const percentages = data.map(val => ((val / total) * 100).toFixed(2));
 
-            // グラフの描画
-            const chart = new Chart(ctx, {
-                type: 'pie',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        label: 'サブスク金額',
-                        data: data,
-                        backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF', '#FF6600'],
-                        borderColor: '#fff',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            position: 'top',
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function(tooltipItem) {
-                                    const label = tooltipItem.label || '';
-                                    const value = tooltipItem.raw || 0;
-                                    const percentage = percentages[tooltipItem.index];
-                                    return `${label}: ${formatNumber(value)}円 (${percentage}%)`;
+            // グラフが既に存在する場合は更新、ない場合は新しく作成
+            if (chartInstance) {
+                chartInstance.data.labels = labels;
+                chartInstance.data.datasets[0].data = data;
+                chartInstance.update();  // 既存グラフの更新
+            } else {
+                chartInstance = new Chart(ctx, {
+                    type: 'pie',
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            label: 'サブスク金額',
+                            data: data,
+                            backgroundColor: ['#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF', '#FF6600'],
+                            borderColor: '#fff',
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        responsive: true,
+                        plugins: {
+                            legend: {
+                                position: 'top',
+                            },
+                            tooltip: {
+                                callbacks: {
+                                    label: function(tooltipItem) {
+                                        const label = tooltipItem.label || '';
+                                        const value = tooltipItem.raw || 0;
+                                        const percentage = percentages[tooltipItem.index];
+                                        return `${label}: ${formatNumber(value)}円 (${percentage}%)`;
+                                    }
                                 }
                             }
                         }
                     }
-                }
-            });
+                });
+            }
         }
 
-        updateTable();
+        updateTable(); // 初期データを表示
     </script>
 
 </body>
