--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                     label: function(tooltipItem) {
                                         const label = tooltipItem.label || '';
                                         const value = tooltipItem.raw || 0;
-                                        const percentage = percentages[tooltipItem.index];
+                                        const percentage = ((value / totalAmount) * 100).toFixed(2); // 割合を直接計算
                                         return `${label}: ${formatNumber(value)}円 (${percentage}%)`;
                                     }
                                 }
