--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         function deleteSubscription(index) {
             subscriptions.splice(index, 1);
-            updateTable();
+            updateTable(); // 削除後にテーブルとグラフを更新
         }
 
         function downloadCSV() {
